--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 *{margin: 0; padding: 0;}
 
 html, body{
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Quicksand', sans-serif !important;
 	font-weight: 400;
 	font-style: normal;
 	overflow-x: hidden;
@@ -16,18 +16,27 @@ html, body{
 	padding-bottom: 50px;
 }
 
+.banner, .about-me, .portfolio, .contact, .footer{
+	padding-left: 2%;
+}
 /*=========navbar=========*/
 
 .navbar{
-	width: 100%;
-    background: #ccc;
+	max-width: 300px;
+/*    background: #ccc;*/
     height: 100%;
     align-items: baseline !important;
+    z-index: 999;
+    position: fixed !important;
+    min-width: 300px;
+    position: fixed;
+    top: 0;
+    left: 0;
+	box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.06);
 }
 
 .navbar-brand{
-	margin: 0 auto;
-	padding-top: 5% !important; 
+	margin: 0 auto !important;
 }
 
 .navbar-brand img{
@@ -64,6 +73,8 @@ html, body{
 .navbar ul{
 	list-style:none;
 	width: 100%;
+	position: absolute;
+    top: 325px;
 }
 
 .navbar ul li{
@@ -71,13 +82,20 @@ html, body{
 	height: 70px;
 	line-height: 70px;
 	text-align:left;
-	padding-left: 30px;
-	margin-left: 10px;
+	padding-left: 25px;
+	border-radius: 4px;
+}
+
+.navbar ul li:hover a, .navbar ul li a:hover, .navbar ul li:hover{
+	cursor: pointer;
+	color: #fff;
 }
 
 .navbar ul li a{
 	font-size: 15px;
 	color: #4c545b;
+	text-decoration: none;
+	font-weight: 500;
 }
 
 .navbar ul li img {
@@ -93,29 +111,167 @@ html, body{
 
 /*=========Main Content=========*/
 .main-content{
-	margin-top:-20px;
+	margin-left: 300px;
 }
 
 
 .banner {
     background-image: url(../images/cover.jpg);
     height: 400px;
-	  background-size: cover;
-	  position: relative;
+	background-size: cover;
+	position: relative;
+	border-radius: 8px;
 }
 
 .wrap-text{
-	width: 80%;
+	width: 70%;
 	border-radius: 14px;
     background-image: linear-gradient(to left, #4f46ea, #2179d8);
 	margin-left:5%;
 	color: #fff;
 	position: absolute;
 	top: 20%;
-	padding:3% 5%;
+	padding:4% 5%;
 }
 
 .wrap-text h1{
 	font-size: 28px;
 	font-weight: bold;
+	color: #fff;
+}
+
+.wrap-text h1:before{
+	background: url(../images/bitmap_4.png);
+	background-repeat: no-repeat;
+	width: 34px;
+	height: 38px;
+	content: "";
+	float: left;
+	margin-right: 20px;
+	margin-top: -9px;
+}
+
+.wrap-text p{
+	width:65%;
+}
+
+.wrap-text span {
+	background-color: #ffffff1a;
+	border-radius:4px;
+	color: #fff;
+	font-size: 13px;
+	text-align: right;
+	padding: 2px 10px;
+}
+
+
+/*=========About Me=========*/
+.about-me{
+	display: flex;
+}
+.about-me .wrap {
+    margin-left: 1%;
+    width: 50%;
+}
+
+.about-me h1{
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.about-me h1:before{
+	background: url(../images/bitmap_3.png);
+	background-repeat: no-repeat;
+	width: 34px;
+	height: 34px;
+	content: "";
+	float: left;
+	margin-right: 20px;
+	margin-top: -5px;
+}
+
+.about-me p{
+	font-size: 16px;
+	line-height: 1.5;
+	text-align: left;
+	color: #373737;
+}
+
+.about-me button {
+	border: solid 1px;
+	border-image: linear-gradient(#ffffff, #ffffff), linear-gradient(to left, #4f46ea, #2179d8);
+	color: #5975ca;
+	font-size: 14px;
+	line-height: 1.57;
+	margin-top: 10px;
+	transition: 0.8s;
+
+}
+
+.about-me button:hover {
+	color: #fff;
+	background-image: linear-gradient(to left, #4f46ea, #2179d8);
+	text-decoration: none;
+	transition: 0.8s;
+}
+
+
+/*=========Portfolio=========*/
+.portfolio {
+	background:#f6faff;
+}
+
+.portfolio .wrap {
+    margin-left: 1%;
+}
+
+.portfolio h1{
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.portfolio h1:before{
+	background: url(../images/bitmap_4.png);
+	background-repeat: no-repeat;
+	width: 34px;
+	height: 34px;
+	content: "";
+	float: left;
+	margin-right: 20px;
+	margin-top: -5px;
+}
+
+.portfolio p{
+	width: 80%;
+	font-size: 16px;
+	color: #373737;
+	line-height: 1.5;
+	font-weight: normal;
+}
+
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	padding: 0 0 !important;
+}
+
+.gallery img{
+	margin-right: 5%;
+}
+
+.portfolio button.btn.btn-link{
+	margin-top: 3%;
+	background-image: linear-gradient(to left, #4f46ea, #2179d8);
+    border-radius: 25px;
+    color: #fff;
+    width: 200px;
+    height: 50px;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.portfolio button.btn.btn-link:hover{
+	background-image: linear-gradient(to left, #0e00ff, #007bff);
 }
