--- a/css/portfolio2.css
+++ b/css/portfolio2.css
@@ -295,18 +295,6 @@ html, body{
   font-weight: normal;
 }
 
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  padding: 0 0 !important;
-}
-
-.gallery img{
-
-}
-
 .portfolio button.btn.btn-link, .contact button.btn.btn-link{
   margin-top: 3%;
   background-image: linear-gradient(to left, #4f46ea, #2179d8);
@@ -323,6 +311,58 @@ html, body{
   background-image: linear-gradient(to left, #0e00ff, #007bff);
 }
 
+
+/*===========gallery===========*/
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 0 0 !important;
+}
+
+.gallery img{
+
+}
+
+.gallery .items{
+  position: relative;
+  width: 33%;
+}
+
+.gallery .items img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.items .overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: background-color 0.5s linear;
+    -moz-transition: background-color 0.5s linear; /* Firefox 4 */
+    -webkit-transition: background-color 0.5s linear; /* Safari and Chrome */
+    -o-transition: background-color 0.5s linear; /* Opera */
+    -ms-transition: background-color 0.5s linear; /* Explorer 10 */
+    background-color:#ff0000;
+}
+
+.items:hover .overlay{
+  opacity: 1;
+  transition-delay: 3s;
+}
+
+.gallery .items .title{
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+}
 
 /*===========contact===========*/
 .contact{
@@ -360,9 +400,8 @@ html, body{
 
 
 .contact .inline{
-  flex: 1 1 auto;
-  display: block;
-  width: 100%;
+  width:  31%;
+  display: inline-block;
   padding: .375rem .75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -372,8 +411,13 @@ html, body{
   border: 1px solid #ced4da;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  margin-right: 15px;
+  /*margin-right: 15px;*/
 }
+
+/*#inputEmail, #inputPassword, .inputMobile{
+  flex: 1 1 auto;
+}*/
+
 
 .contact .inline:focus {
     color: #495057;
@@ -386,6 +430,7 @@ html, body{
 .contact .form-group{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .contact textarea{
