--- a/css/portfolio2.css
+++ b/css/portfolio2.css
@@ -304,16 +304,31 @@ html, body{
   height: 50px;
   font-size: 14px;
   text-decoration: none;
-  transition: all 2s ease;
 }
 
-.portfolio button.btn.btn-link:hover, .contact button.btn.btn-link:hover{
+.portfolio button.btn.btn-link:after, .contact button.btn.btn-link:after{
+  content: '';
+  width: 200px;
+  height: 50px;
   background-image: linear-gradient(to left, #0e00ff, #007bff);
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
+.portfolio button.btn.btn-link:hover:after, .contact button.btn.btn-link:hover:after{
+  /*background-image: linear-gradient(to left, #0e00ff, #007bff);*/
+  opacity: 1;
+}
+.portfolio button.btn.btn-link span {
+  position: relative;
+  z-index: 3;
+}
 
 /*===========gallery===========*/
-.gallery {
+/*.gallery {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -327,6 +342,7 @@ html, body{
 .gallery .items{
   position: relative;
   width: 33%;
+  overflow:   hidden; 
 }
 
 .gallery .items img{
@@ -338,21 +354,20 @@ html, body{
 .items .overlay{
   position: absolute;
   top: 0;
-  left: 0;
+  left: -200px;
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: background-color 0.5s linear;
-    -moz-transition: background-color 0.5s linear; /* Firefox 4 */
-    -webkit-transition: background-color 0.5s linear; /* Safari and Chrome */
-    -o-transition: background-color 0.5s linear; /* Opera */
-    -ms-transition: background-color 0.5s linear; /* Explorer 10 */
-    background-color:#ff0000;
+  transition: opacity 1s 0.5s ease;
+  -moz-transition: opacity 1s 0.5s ease;
+  -webkit-transition: opacity 1s 0.5s ease; 
+  -o-transition: opacity 1s 0.5s ease; 
+  -ms-transition: opacity 1s 0.5s ease; 
+  background:#34495e;
 }
 
 .items:hover .overlay{
   opacity: 1;
-  transition-delay: 3s;
 }
 
 .gallery .items .title{
@@ -362,8 +377,112 @@ html, body{
   top: 50%;
   left: 50%;
   text-align: center;
+}*/
+
+
+.wrap-items{
+  display: flex;
+  flex-flow: row wrap;
+  height: 100%;
+  justify-content: flex-start;
+}
+.item{ 
+  flex: 0 0 auto;
+  margin: 5px 5px;
 }
 
+.hovereffect {
+width:100%;
+height:100%;
+float:left;
+overflow:hidden;
+position:relative;
+text-align:center;
+cursor:default;
+border-radius: 8px;
+}
+
+.hovereffect .overlay {
+width:100%;
+height:100%;
+position:absolute;
+overflow:hidden;
+top:0;
+left:0;
+opacity:0;
+background-image: linear-gradient(to left, #d8d8da, #0068d8);
+-webkit-transition:all .4s ease-in-out;
+transition:all .4s ease-in-out
+}
+
+.hovereffect img {
+display:block;
+position:relative;
+-webkit-transition:all .4s linear;
+transition:all .4s linear;
+max-width: 240px;
+}
+
+.hovereffect h2 {
+text-transform:uppercase;
+color:#fff;
+text-align:center;
+position:relative;
+font-size:17px;
+background:rgba(0,0,0,0.6);
+-webkit-transform:translatey(-100px);
+-ms-transform:translatey(-100px);
+transform:translatey(-100px);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+padding:10px;
+}
+
+.hovereffect a.info {
+text-decoration: none;
+display: inline-block;
+text-transform: uppercase;
+color: #fff;
+border: 1px solid #fff;
+background-color: transparent;
+opacity: 0;
+filter: alpha(opacity=0);
+-webkit-transition: all .2s ease-in-out;
+transition: all .2s ease-in-out;
+transition-delay: 0s;
+margin: 10% 0 50%;
+padding: 7px 14px;
+word-spacing: 2px;
+
+}
+
+.hovereffect a.info:hover {
+box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+-ms-transform:scale(1.2);
+-webkit-transform:scale(1.2);
+transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+opacity:0.6;
+filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+opacity:1;
+filter:alpha(opacity=100);
+-ms-transform:translatey(0);
+-webkit-transform:translatey(0);
+transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+-webkit-transition-delay:.2s;
+transition-delay:.2s;
+}
 /*===========contact===========*/
 .contact{
   
