--- a/css/portfolio2.css
+++ b/css/portfolio2.css
@@ -169,18 +169,18 @@ html, body{
 }
 
 .sidebar ul li{
-  /*! width: 100%; */
-  /*! height: 70px; */
   line-height: 70px;
   text-align:left;
   padding-left: 25px;
   border-radius: 4px;
-  /*! position: fixed; */
+  transition: all 0.4s ease-out;
+  opacity: 0.8;
 }
 
 .sidebar ul li:hover a, ul li a:hover, ul li:hover{
   cursor: pointer;
   color: #fff;
+  opacity: 1;
 }
 
 .sidebar ul li a{
@@ -304,87 +304,23 @@ html, body{
   height: 50px;
   font-size: 14px;
   text-decoration: none;
-}
-
-.portfolio button.btn.btn-link:after, .contact button.btn.btn-link:after{
-  content: '';
-  width: 200px;
-  height: 50px;
-  background-image: linear-gradient(to left, #0e00ff, #007bff);
-  opacity: 0;
-  transition: opacity 0.5s ease-out;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.portfolio button.btn.btn-link:hover:after, .contact button.btn.btn-link:hover:after{
-  /*background-image: linear-gradient(to left, #0e00ff, #007bff);*/
   opacity: 1;
+  transition: opacity 0.4s ease-out
 }
-.portfolio button.btn.btn-link span {
-  position: relative;
-  z-index: 3;
+
+.portfolio button.btn.btn-link:hover, .contact button.btn.btn-link:hover{
+  opacity: 0.7;
 }
+
 
 /*===========gallery===========*/
-/*.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  padding: 0 0 !important;
-}
-
-.gallery img{
-
-}
-
-.gallery .items{
-  position: relative;
-  width: 33%;
-  overflow:   hidden; 
-}
-
-.gallery .items img{
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.items .overlay{
-  position: absolute;
-  top: 0;
-  left: -200px;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: opacity 1s 0.5s ease;
-  -moz-transition: opacity 1s 0.5s ease;
-  -webkit-transition: opacity 1s 0.5s ease; 
-  -o-transition: opacity 1s 0.5s ease; 
-  -ms-transition: opacity 1s 0.5s ease; 
-  background:#34495e;
-}
-
-.items:hover .overlay{
-  opacity: 1;
-}
-
-.gallery .items .title{
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-}*/
-
 
 .wrap-items{
   display: flex;
   flex-flow: row wrap;
   height: 100%;
-  justify-content: flex-start;
+  justify-content: space-between;
+  width: 90%;
 }
 .item{ 
   flex: 0 0 auto;
@@ -530,12 +466,8 @@ transition-delay:.2s;
   border: 1px solid #ced4da;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  /*margin-right: 15px;*/
 }
 
-/*#inputEmail, #inputPassword, .inputMobile{
-  flex: 1 1 auto;
-}*/
 
 
 .contact .inline:focus {
@@ -574,4 +506,6 @@ transition-delay:.2s;
     box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
 }
 
-
+.top-sidebar ul li img:nth-child(1){
+ background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cg fill='%23706F68' fill-rule='nonzero'%3e%3cpath d='M6 6h4v2H6z'/%3e%3cpath d='M15.651 6.241l-7-6a.998.998 0 0 0-1.302 0L4 3.112V2a1 1 0 1 0-2 0v2.826L.349 6.241a.999.999 0 1 0 1.302 1.517L2 7.46V15a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V7.46l.349.299c.189.162.42.241.651.241a1 1 0 0 0 .651-1.759zM12 14h-2v-4H6v4H4V5.746l4-3.428 4 3.428V14z'/%3e%3c/g%3e%3c/svg%3e ");
+}
